# e-commerce-market-agent

./: .dockerignore  .env.example  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  render.yaml
.github/workflows/: ci.yml
app/agent/: graph.py  nodes.py  prompts.py  state.py
app/api/: main.py  routes.py  schemas.py  store.py
app/core/: config.py  errors.py  logging.py  report.py
app/llm/: deepseek.py
app/tools/: base.py  mockdata.py  report_generator.py  sentiment_analyzer.py  trend_analyzer.py  web_scraper.py
app/ui/: streamlit_app.py
docs/: architecture.md
docs/decisions/: 0001-langgraph-over-native-and-react.md  0002-deepseek-llm.md  0003-streamlit-ui.md  0004-scrape-with-mock-fallback.md  0005-deploy-render-railway.md
docs/superpowers/plans/: 2026-07-15-e-commerce-market-agent.md
docs/superpowers/specs/: 2026-07-15-e-commerce-market-agent-design.md
docs/theory/: 04-data-storage.md  05-monitoring-observability.md  06-scaling-optimization.md  07-continuous-improvement.md
sample_reports/: generate_sample.py  iphone-15.json
tests/: conftest.py  test_agent.py  test_api.py  test_base_tool.py  test_config.py  test_llm.py  test_mockdata.py  test_nodes.py  test_report_generator.py  test_report_model.py  test_sentiment_analyzer.py  test_state.py  test_trend_analyzer.py  test_web_scraper.py
